--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @version:
  * @Author: Murphy
  * @Date: 2022-04-17 17:01:18
- * @LastEditTime: 2022-04-17 17:07:20
+ * @LastEditTime: 2022-08-11 10:59:15
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +12,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Data Admin</title>
 </head>
 
 <body>
